--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,11 @@ author = Amir Mofakhar
 author-email = amir@mofakhar.info
 home-page = https://github.com/pangan/pangan
 
+classifier =
+    Programming Language :: Python :: 3",
+    License :: OSI Approved :: Apache Software License,
+    Operating System :: OS Independent",
+
 [entry_points]
 console_scripts =
     pangan = pangan.app:launch
