fixed python version

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ author-email = amir@mofakhar.info
 home-page = https://github.com/pangan/pangan
 
 classifier =
-    Programming Language :: Python :: 3",
+    Programming Language :: Python :: 3,
     License :: OSI Approved :: Apache Software License,
     Operating System :: OS Independent",
 
